Fixed spacing.

--- a/gamelog/styles/gamelog.css
+++ b/gamelog/styles/gamelog.css
@@ -18,21 +18,23 @@ body {
 
 /* Button Content */
       
-.adjust-button{
+.adjust-button {
    background-color: #392B58;
    color: white;
    text-decoration: none;
    font-size: 30px;
    padding: 15px 30px;
-   margin-top: 50px;
+   margin-top: 0; /* Remove top margin */
    border-radius: 5px;
    opacity: 90%;
+   margin: 0 10px; /* Add horizontal margin for spacing */
 }
-   .adjust-button:hover {
-       color: #B6CACE;
-       background-color: #645E9D;
-       text-shadow: 1.5px 1.5px #000000;
-   }
+
+.adjust-button:hover {
+   color: #B6CACE;
+   background-color: #645E9D;
+   text-shadow: 1.5px 1.5px #000000;
+}
 
 #main-bottom-button {
    padding: 20px;
@@ -185,13 +187,19 @@ p {
    font-size: 1.1em;
 }
 
+.top-interactables {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: space-between;
+   margin-bottom: 20px;
+}
+
 .search-form {
    display: flex;
    flex-direction: row;
-   margin: 0 auto;
-   margin-bottom: 15px;
-   margin-left: 15px;
-   margin-right: 15px;
+   flex-grow: 1;
+   margin: 0 15px;
    border: black 1px solid;
    border-radius: 5px;
 }
